# hapi

./: Cargo.toml  README.md  db.json  refactor.md  settings.json
src/: errors.rs  infrastructure.rs  main.rs  model.rs  settings.json
src/events/: commands.rs  events.rs  mod.rs
src/infrastructure/: access_point.rs  api.rs  core_handler.rs  mod.rs  module_handler.rs  probe.rs  probe_handler.rs  processor.rs  serializable_model.rs  settings.rs  stats.rs  stats_handler.rs  upstream_probe.rs
src/interfaces/: api.rs
src/model/: context.rs  mod.rs  model.rs  route.rs  upstream.rs  upstream_strategy.rs
src/modules/: core.rs  mod.rs  probe.rs  stats.rs
src/repositories/: jsonfile.rs  mod.rs
